[package]
authors = ['Daniel Yu <leptonyu@gmail.com>']
categories = ['config']
description = 'A rust configuration loader'
documentation = 'https://docs.rs/cfg-rs/'
edition = "2018"
homepage = 'https://github.com/leptonyu/cfg-rs'
keywords = ['configuration', 'config', 'settings', 'env', 'environment']
license = 'MIT'
name = "cfg-rs"
readme = 'README.md'
repository = 'https://github.com/leptonyu/cfg-rs'
rust-version = "1.74.0"
version = "0.4.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ['--cfg', 'docsrs']

[package.metadata.playground]
all-features = true

[workspace]
members = ['.', 'cfg-derive']

[features]
default = []
full = ["toml", "yaml", "json", "rand", "ini", "log"]
ini = ["rust-ini"]
rand = ["rand_chacha", "rand_core"]
yaml = ["yaml-rust"]

[dependencies]
cfg-derive = { path = './cfg-derive', version = '^0.2' }
json = { version = ">= 0.12.4", optional = true }
log = { version = ">= 0.4.20", optional = true }
rand_chacha = { version = ">= 0.3.1", optional = true, features = ["std"] }
rand_core = { version = '>= 0.6.4', optional = true, features = ["std"] }
rust-ini = { version = ">= 0.20.0", optional = true }
toml = { version = ">= 0.8.10", optional = true }
yaml-rust = { version = ">= 0.4.5", optional = true }

[dev-dependencies]
env_logger = ">= 0.11.2"
criterion = '>= 0.5.1'
clap = '>= 4.5.1'
regex = '>= 1.10.4'
log = '>= 0.4.20'
quickcheck = '1'
quickcheck_macros = '1'

[[example]]
name = "thread_pool"
[[example]]
name = "salak"
[[example]]
name = "test_suit"
[[example]]
name = "logger"
required-features = ["full"]
[[example]]
name = "refresh"
[[example]]
name = "watch"
required-features = ["yaml"]
[[example]]
name = "profile"
required-features = ["toml"]
[[example]]
name = "simple"
required-features = ["full"]
[[bench]]
harness = false
name = "core"
