[package]
authors = ['Daniel Yu <leptonyu@gmail.com>']
categories = ['config']
description = 'A rust configuration loader'
documentation = 'https://docs.rs/cfg-rs/'
edition = "2018"
homepage = 'https://github.com/leptonyu/cfg-rs'
keywords = ['configuration', 'config', 'settings', 'env', 'environment']
license = 'MIT'
name = "cfg-rs"
readme = 'README.md'
repository = 'https://github.com/leptonyu/cfg-rs'
rust-version = "1.81.0"
version = "1.0.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ['--cfg', 'docsrs']

[package.metadata.playground]
all-features = true

[workspace]
members = ['.', 'cfg-derive']

[features]
default = []
full = ["toml", "yaml", "json", "rand", "ini", "log", "coarsetime", "regex"]
ini = ["dep:rust-ini"]
rand = ["dep:rand_chacha", "dep:rand_core"]
yaml = ["dep:yaml-rust2"]
toml = ["dep:toml"]
json = ["dep:json"]
log = ["dep:log"]
coarsetime = ["dep:coarsetime"]
regex = ["dep:regex"]

[dependencies]
cfg-derive = { path = './cfg-derive', version = '^1.0.0' }
json = { version = ">= 0.12.4", optional = true }
log = { version = ">= 0.4.20", optional = true }
rand_chacha = { version = ">= 0.9.0", optional = true, features = [
    "std",
    "os_rng",
] }
rand_core = { version = '>= 0.9.0', optional = true, features = [
    "std",
    "os_rng",
] }
rust-ini = { version = ">= 0.21.0", optional = true }
toml = { version = ">= 0.9", optional = true }
yaml-rust2 = { version = ">= 0.11", optional = true }
coarsetime = { version ="^0.1", optional = true }
regex = { version = ">= 1.10.3", optional = true }

[dev-dependencies]
env_logger = ">= 0.11.2"
criterion = '^0.7'
clap = '>= 4.5.1'
regex = '>= 1.10.3'
log = '>= 0.4.20'
quickcheck = '1'
quickcheck_macros = '1'

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[[example]]
name = "thread_pool"
[[example]]
name = "salak"
[[example]]
name = "test_suit"
[[example]]
name = "logger"
required-features = ["full"]
[[example]]
name = "refresh"
[[example]]
name = "watch"
required-features = ["yaml"]
[[example]]
name = "profile"
required-features = ["toml"]
[[example]]
name = "simple"
required-features = ["full"]
[[example]]
name = "validate"
required-features = ["regex"]
[[bench]]
harness = false
name = "core"
