[package]
authors = ['Daniel Yu <leptonyu@gmail.com>']
categories = ['config']
description = 'A rust configuration loader'
documentation = 'https://docs.rs/cfg-derive/'
edition = "2018"
homepage = 'https://github.com/leptonyu/cfg-rs'
keywords = ['configuration', 'config', 'settings', 'env', 'environment']
license = 'MIT'
name = "cfg-derive"
readme = 'README.md'
repository = 'https://github.com/leptonyu/cfg-rs'
version = "0.2.0"

[lib]
proc-macro = true

[dependencies]
quote = '1'
syn = { version = '2.0.60', features = ['extra-traits'] }
