[package]
authors = ['Daniel Yu <leptonyu@gmail.com>']
categories = ['config']
description = 'A rust configuration loader'
documentation = 'https://docs.rs/cfg-derive/'
edition = "2018"
homepage = 'https://github.com/leptonyu/cfg-rs'
keywords = ['configuration', 'config', 'settings', 'env', 'environment']
license = 'MIT'
name = "cfg-derive"
readme = 'README.md'
repository = 'https://github.com/leptonyu/cfg-rs'
version = "1.0.0"

[lib]
proc-macro = true

[features]
regex = ["dep:regex"]

[dependencies]
quote = '1'
syn = { version = '2', features = ['extra-traits'] }
regex = { version = ">= 1.10.3", optional = true }

